--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "my-app",
+  "name": "MoviesSearch",
   "version": "0.1.0",
+  "homepage": "https://kalakotisailesh.github.io/MoviesSearch/",
   "private": true,
   "dependencies": {
     "react": "^16.4.0",
@@ -11,6 +12,12 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
+    
+  },
+  "devDependencies": {
+    "gh-pages": "^1.2.0"
   }
 }
